<resources>
    <string name="app_name">Yakshanidhi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="url">http://yakshanidhi.com</string>
    <string name="facebook_app_id">1381892598530208</string>

    <string name="fb_login_protocol_scheme">fb1381892598530208</string>
    <string name="server_client_id">1009097919953-j4rvqtb6f9ggae4et8fvdgjpf1iq1h3o.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_card">Email Address Will be here</string>
    <string name="contact_card">Contact No will be here</string>
    <string name="address_card">VILLAGE\nTALUK\nDISTRICT\nPINCODE</string>
    <string name="title">Yakshanidhi</string>
    <string name="prasangha_name">Prasangha Name</string>
    <string name="language">Choose your language</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="english">English</string>
    <string name="select">Done</string>
    <string name="artist_name">Artist Name</string>
    <string name="mela_name">Mela Name</string>
    <string name="artist_place">Artist Place</string>
    <string name="division_name">Division Name</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="android_studio_android_com">contact.us@yakshanidhi.com</string>
    <string name="search">Search</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="email">ಇ-ಮೇಲ್</string>
    <string name="contact_no">ದೂರವಾಣಿ ಸಂಖ್</string>
    <string name="artist_name_header">artist_name</string>
    <string name="mela_name_header">Mela name</string>
    <string name="artist_place_val">artist_place</string>
    <string name="name">name</string>
    <string name="time">time</string>
    <string name="ccmment">Ccmment</string>
    <string name="your_comment">your comment</string>
    <string name="search_shows">Search Shows</string>
    <string name="submit">Submit</string>
    <string name="search_prasangha">Search Prasangha</string>
    <string name="search_artist">Search Artist</string>
    <string name="search_mela">Search Mela</string>
</resources>
