<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/language"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/langgroup"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kannada"
        android:layout_below="@+id/title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/kannada"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/english"
        android:layout_below="@+id/kannada"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/english"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/done_button"
        android:layout_height="wrap_content"
        android:layout_below="@+id/langgroup"
        android:text="@string/select"/>

</RelativeLayout>