<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".details.ArtistDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mela_pic"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginBottom="50dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userimg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="bottom"
                        android:src="@drawable/userimg" />
                </RelativeLayout>

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frame"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/artist_name_header"
                    android:textColor="#2c155e"
                    android:textSize="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_below="@+id/artist_name"
                    android:layout_marginTop="10dp"
                    android:background="#dad8d8" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/division"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_layout"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/division_name"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/division_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="division"
                    android:textColor="#2c155e"
                    android:textSize="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_below="@+id/division_name"
                    android:layout_marginTop="10dp"
                    android:background="#dad8d8" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/place_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/division"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_place"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/artist_place_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="artist_place"
                    android:textColor="#2c155e"
                    android:textSize="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_below="@+id/artist_place_name"
                    android:layout_marginTop="10dp"
                    android:background="#dad8d8" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/place_mela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/place_artist"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mela_name_header"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/artist_mela_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/artist_place_val"
                    android:textColor="#2c155e"
                    android:textSize="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_below="@+id/artist_mela_name"
                    android:layout_marginTop="10dp"
                    android:background="#dad8d8" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>